--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,5 @@
-# requirements.txt
-streamlit==1.28.1
-plotly==5.17.0
-pandas==2.1.3
-numpy==1.24.3
-huggingface-hub==0.19.4
+streamlit>=1.28
+pandas>=2.2
+numpy>=1.26
+plotly>=5.17
+matplotlib
